--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,32 @@
+# ===============================
+# DATABASE
+# ===============================
+ 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+ 
+spring.datasource.url=jdbc:mysql://localhost:3306/ifootball
+spring.datasource.username=root
+spring.datasource.password=quang9994
+  
+ 
+ 
+# ===============================
+# JPA / HIBERNATE
+# ===============================
+ 
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
+spring.thymeleaf.cache=false
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=quangphuet99@gmail.com
+spring.mail.password=Quang9994
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
+spring.jpa.properties.javax.persistence.schema-generation.scripts.create-source=metadata
