--- a/pom.xml
+++ b/pom.xml
@@ -86,11 +86,13 @@
 			<version>4.1.1</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.webjars/jquery-ui -->
 		<dependency>
 			<groupId>org.webjars</groupId>
-			<artifactId>bootstrap-datetimepicker</artifactId>
-			<version>2.4.4</version>
+			<artifactId>jquery-ui</artifactId>
+			<version>1.12.1</version>
 		</dependency>
+		
 	</dependencies>
 
 	<build>
